# sqlite

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Package.swift  Package.swift.template  README.md  _buildAAR.sh  _buildLocalTest.sh  _buildXCFramework.sh  _init.sh  build.sh  build.sh.orig  clean.sh  docs.md  install.sh  makeRelease.sh  publish.sh  sqlite.podspec.template  sqlite3.podspec  sqlite3.podspec.template  sync.sh
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/sqlite3/: build.gradle
android/sqlite3/src/main/: AndroidManifest.xml
android/sqlite3/src/main/cpp/: CMakeLists.txt
android/sqlite3/src/main/java/com/totalpave/sqlite/: ColumnType.java  SQLiteException.java  Sqlite.java  SqliteException.java  Statement.java
android/sqlite3/src/main/java/com/totalpave/sqlite3/: ColumnType.java  Sqlite.java  Statement.java
android/testapp/: build.gradle
android/testapp/src/main/: AndroidManifest.xml
android/testapp/src/main/java/com/totalpave/sqlitetestapplication/: MainActivity.java
build-tools/: syncDeps.sh  syncGradle.sh
cmake/: android.cmake  buildConfig.cmake  ios.cmake
cmake/toolchains/: android-aarch64.cmake  android-armv7a.cmake  android-i686.cmake  android-toolchain.cmake  android-x86_64.cmake  common.cmake  ios-arm64-simulator.cmake  ios-arm64.cmake  ios-toolchain.cmake  ios-x86_64.cmake  iossim-arm64.cmake  iossim-x86_64.cmake  linux-android-aarch64.cmake  linux-android-armv7a.cmake  linux-android-i686.cmake  linux-android-x86_64.cmake  linux-arm64.cmake  linux-x86_64.cmake  local.cmake  mac-arm64.cmake  mac-ios-arm64.cmake  mac-ios-x86_64.cmake  mac-x86_64.cmake
ios/: info.plist
ios/sqlite3/: PrivacyInfo.xcprivacy
ios/sqlite3.xcworkspace/: contents.xcworkspacedata
ios/sqlite3/sqlite/: TPISQLiteUtilities.h  TPISQLiteUtilities.mm  sqlite.h
ios/sqlite3/sqlite.xcodeproj/: project.pbxproj
ios/sqlite3/sqlite/tp-sqlite-ext/: utilities.h
ios/sqlite3/sqlite3/: sqlite3.h
ios/sqlite3/sqlite3.xcodeproj/: project.pbxproj
ios/sqlite3/sqlite3.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/sqlite3/sqlite3.xcodeproj/xcshareddata/xcschemes/: sqlite3-intermediate.xcscheme  sqlite3.xcscheme
ios/sqlite3/sqlite3/src/: ConvertISO8601ToTimestamp.cpp  utilities.cpp
ios/sqlite3/sqlite3/src/extensions/: ConvertISO8601ToTimestamp.cpp
ios/sqlitetest/sqlitetest/: AppDelegate.h  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.mm
ios/sqlitetest/sqlitetest.xcodeproj/: project.pbxproj
ios/sqlitetest/sqlitetest.xcodeproj/project.xcworkspace/xcuserdata/tylerbreau.xcuserdatad/: UserInterfaceState.xcuserstate
ios/sqlitetest/sqlitetest.xcodeproj/xcuserdata/tylerbreau.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/sqlitetestapp/sqlitetestapp/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.mm
ios/sqlitetestapp/sqlitetestapp.xcodeproj/: project.pbxproj
npm/: .gitignore  .npmignore  copyBinaries.sh  package.template.json  plugin.template.xml
src/: Makefile  config.status  libtool  sqlite3.pc
src/android/: jni.cc
src/sqlite/: Makefile  configure  libtool  sqlite3.pc  sqlite3ext.h
src/totalpave/: binding.cc  jni.cc  utilities.cpp  utilities.h
src/totalpave/extensions/: ConvertISO8601ToTimestamp.cpp
src/totalpave/include/tp/sqlite/: utilities.h
src/totalpave/include/tp/sqlite/extensions/: ConvertISO8601ToTimestamp.h
test/android/: settings.gradle
test/android/app/: build.gradle
test/android/app/src/androidTest/java/com/totalpave/sqlitetestapplication/: ExampleInstrumentedTest.java
test/android/app/src/main/: AndroidManifest.xml
test/android/app/src/main/java/com/totalpave/sqlitetestapplication/: MainActivity.java
test/android/app/src/main/res/values/: strings.xml  themes.xml
test/android/app/src/main/res/values-night/: themes.xml
test/android/app/src/test/java/com/totalpave/sqlitetestapplication/: ExampleUnitTest.java
test/ios/sqlitetest/sqlitetest/: AppDelegate.m  main.mm
test/ios/sqlitetest/sqlitetest.xcodeproj/: project.pbxproj
test/ios/sqlitetest/sqlitetest.xcodeproj/xcshareddata/xcschemes/: sqlitetest.xcscheme
test/local/: main.cpp
